[metadata]
name = generate-iconset
#version = attr: %(name)s.version.__version__
version = attr: generate_iconset.version.__version__
author = retif
description = Generating an iconset for Mac OS application
long_description = file: README.md
long_description_content_type = text/markdown
keywords = iconutil, iconset
url = https://github.com/retifrav/generate-iconset
project_urls =
    Bug Tracker = https://github.com/retifrav/generate-iconset/issues
    Changelog = https://github.com/retifrav/generate-iconset/blob/master/changelog.md
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    generate-iconset = generate_iconset.generate_iconset:main
